deployments/k8s/overlays/cloud/service-healthchecks.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-api-server
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/proxy/ping
---
apiVersion: v1
kind: Service
metadata:
  name: admin-api-server
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/admin/ping
