deployments/k8s/overlays/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxy-service
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: proxy-service.sylu.net
      http:
        paths:
          - path: /api/proxy
            pathType: Prefix
            backend:
              service:
                name: proxy-api-server
                port:
                  number: 80
          - path: /api/admin
            pathType: Prefix
            backend:
              service:
                name: admin-api-server
                port:
                  number: 80
